--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "fullstack-boilerplate",
   "version": "1.0.0",
   "scripts": {
-    "build:backend": "cd app-backend && npm install && npm run build",
+    "build:backend": "dotnet build app-backend/backend.sln",
     "build:frontend": "cd app-frontend && npm install && npm run build",
     "build": "npm run build:backend && npm run build:frontend",
-    "start:backend": "cd app-backend && npm run start",
+    "start:backend": "cd app-backend/backend && dotnet run",
     "start:frontend": "cd app-frontend && npm run start",
     "start": "npm run start:backend & npm run start:frontend",
     "test": "cypress run"
