--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,7 +1,10 @@
 name: Tests
 on:
-  pull_request:
-    types: [opened, reopened]
+  push:
+    branches:
+      - '*'
+      - '!master'
+      - '!main'
 jobs:
   tests:
     runs-on: ubuntu-20.04
