--- a/app-backend/backend/appsettings.json
+++ b/app-backend/backend/appsettings.json
@@ -7,6 +7,7 @@
     }
   },
   "AllowedHosts": "*",
+  "AllowedOrigins": "http://localhost:4200;http://localhost:5000",
   "ConnectionStrings": {
     "Default": "Data Source=./DB/accounts.sqlite"
   }
